--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: mood_tracker
+name: MoodTracker
 description: Self track your mood day to day
 
 # The following defines the version and build number for your application.
